AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS  = ${ACLOCAL_FLAGS}

bin_PROGRAMS     = vimpc
man_MANS         = doc/vimpc.1
doc_DATA         = doc/help.txt
vimpc_SOURCES    = src/assert.hpp \
                   src/attributes.hpp \
                   src/buffer.hpp \
                   src/colour.hpp \
                   src/command.cpp \
                   src/command.hpp \
                   src/config.hpp \
                   src/console.cpp \
                   src/console.hpp \
                   src/error.hpp \
                   src/help.cpp \
                   src/help.hpp \
                   src/inputmode.cpp \
                   src/inputmode.hpp \
                   src/library.cpp \
                   src/library.hpp \
                   src/librarywindow.cpp \
                   src/librarywindow.hpp \
                   src/main.cpp \
                   src/mode.hpp \
                   src/modewindow.cpp \
                   src/modewindow.hpp \
                   src/mpdclient.cpp \
                   src/mpdclient.hpp \
                   src/normal.cpp \
                   src/normal.hpp \
                   src/player.cpp \
                   src/player.hpp \
                   src/playlist.cpp \
                   src/playlist.hpp \
                   src/playlistwindow.cpp \
                   src/playlistwindow.hpp \
                   src/project.hpp \
                   src/screen.cpp \
                   src/screen.hpp \
                   src/search.cpp \
                   src/search.hpp \
                   src/settings.cpp \
                   src/settings.hpp \
                   src/scrollwindow.hpp \
                   src/scrollwindow.cpp \
                   src/selectwindow.hpp \
                   src/selectwindow.cpp \
                   src/song.hpp \
                   src/song.cpp \
                   src/vimpc.cpp \
                   src/vimpc.hpp \
                   src/window.cpp \
                   src/window.hpp

dist_noinst_SCRIPTS = autogen.sh
